# neology_patterns

chain/: CMakeLists.txt  main.cpp
command/: CMakeLists.txt  main.cpp
observer/: CMakeLists.txt  main.cpp
